@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2094 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2095 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -187,3 +187,4 @@ Changes from NetBSD 7.0 to NetBSD 8.0:
 	libc: Update to tzcode2015f. [christos 20150813]
 	gdb(1): Updated to 7.9.1.  [christos 20150818]
 	acpi(4): Updated ACPICA to 20150717. [christos 20150818]
+	mcp3kadc(4): Driver for Microchip 3x0x SAR ADC chips. [phx 20150818]
